--- a/style.css
+++ b/style.css
@@ -5,30 +5,89 @@
 nav{
     
     height: 50px;
-    background-color: #601db3;
+    background-color: #762FCF;
 }
 .home{
-    background-color: #762FCF;
-    height: 90vh;
+    
+    background-color: #000000c9;
+    height: 100vh;
     display: flex;
     justify-content:space-around; 
     align-items: center;
+    flex-wrap: wrap;
+    background-image: url(imagens/wave-\(azul\).png);
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size:contain;
+    position: relative;
+    
+}
 
+
+#bg{
+    filter: blur(1px);
+    z-index: -5;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    
+}
+a{
+    text-decoration: none;
+}
+.redes{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    
+    
+    height: 100px;
+}
+button{
+    cursor: pointer;
+    margin: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+    font-size: xx-large;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    padding: 10px;
+    border-radius: 10px;
+    height: 80px;
+    box-shadow: 6px 5px  10px #000000 ;
+    border: 5px solid #762FCF;
 
 }
+button img{
+    height: 50px;
+    margin-right: 20px;
+}
+
 .Mnome{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 5vw;
+    font-size: 100px;
     text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.589);
+    
+}
+i{
+    font-size: 40%;
+
 }
 .Fperfil{
     border-radius: 50%;
     box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.178);
+    margin: 50px;
+    
 }
 .Formaçao{
-    background-color: #F44926;
-    height: 100vh;
+    background-color: #762FCF;
+    
     
 }
 .ttformaçao{
@@ -47,10 +106,10 @@ nav{
 
 
 .iformaçao{
-    max-height: 350px;
+    max-height: 250px;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.589);
     border-radius: 25px;
-
+    margin: 20px;
 }
 
 .listformaçao{
@@ -62,6 +121,7 @@ nav{
         width: 1000px;
         height: 550px;
         overflow-x: auto;
+        margin: 25px;
 
 }
 .cardformacao{
@@ -79,15 +139,15 @@ nav{
     font-family: Arial, Helvetica, sans-serif;
     margin-bottom: 15px;
     font-size: 4vh;
-    color: #F44926;;
+    color: #F44926;
     font-weight: bolder;
     width: 300px;
 }
 .conteiner{
-    height: 100vh;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .pformaçao{
@@ -103,17 +163,25 @@ nav{
     
 }
 
+.projetos{
+    background-color: #762FCF;
+    height: 100vh;
+    
+}
+
+
 
 
 
 
 ::-webkit-scrollbar-thumb{
-    background-color: #762FCF;
-    border-radius: 10px;
-    
+   background-color:#762FCF;
+   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.39);
+   
 
 }
 ::-webkit-scrollbar{
-   
-    border-radius: 10px;
+    background-color: #ffffff;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.39);
+    
 }
