--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ nav{
     background-color: #000000c9;
     height: 100vh;
     display: flex;
-    justify-content:space-around; 
+    justify-content:center; 
     align-items: center;
     flex-wrap: wrap;
     background-image: url(imagens/wave-\(azul\).png);
@@ -68,20 +68,20 @@ button{
     display: flex;
     padding: 10px;
     border-radius: 10px;
-    height: 80px;
     box-shadow: 6px 5px  10px #000000 ;
     border: 5px solid #762FCF;
+    font-size: clamp(1em, 1em + 1vw, 1.5em);
 
 }
 button img{
-    height: 50px;
+    height: 30px;
     margin-right: 20px;
 }
 
 .Mnome{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 100px;
+    font-size: 70px;
     text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.589);
     
 }
@@ -93,6 +93,8 @@ i{
     border-radius: 50%;
     box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.178);
     margin: 50px;
+    height: 40vw;
+    max-height:300px;
     
 }
 .Formaçao{
@@ -195,7 +197,7 @@ i{
     font-family: 'Russo One', sans-serif;
     height: 100px;
     text-transform: uppercase;
-    font-size: 60px;
+    font-size: clamp(2.5em, 1em + 1vw, 2em);
     text-align: center;
     margin-top: 10px;
     text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.39);
@@ -213,7 +215,7 @@ i{
 
 .Dprojeto{
     margin: 50px;
-    width: 360px;
+    max-width: 350px;
     padding: 20px;
     background-color: white;
     border-radius: 10px;
